Implement classic game on Loom virtual threads